add theme buttons block modify some general styles

--- a/wp-content/themes/fcc/resources/sass/main/_general.scss
+++ b/wp-content/themes/fcc/resources/sass/main/_general.scss
@@ -45,6 +45,10 @@ body small {
   }
 }
 
+.wp-block-image img[class*=wp-image-] {
+  @extend .rounded;
+}
+
 $position-values: (
     0: 0,
     20: 20%,
