--- a/wp-content/themes/fcc/resources/sass/theme.scss
+++ b/wp-content/themes/fcc/resources/sass/theme.scss
@@ -43,4 +43,5 @@
     '../../blocks/page-intro/page-intro',
     '../../blocks/experience-carousel/experience-carousel',
     '../../blocks/container/container',
+    '../../blocks/theme-buttons/theme-buttons',
     '../../blocks/locations/locations';
