--- a/wp-content/themes/fcc/blocks/rates-dates/rates-dates.scss
+++ b/wp-content/themes/fcc/blocks/rates-dates/rates-dates.scss
@@ -52,3 +52,13 @@
     border-spacing: 5px;
 }
 
+#rates-dates td {
+  a {
+    text-decoration: underline;
+    font-size: 12px;
+  }
+  a, p {
+    margin: 0;
+  }
+}
+
