--- a/wp-content/themes/fcc/blocks/faqs-with-search/faqs-with-search.scss
+++ b/wp-content/themes/fcc/blocks/faqs-with-search/faqs-with-search.scss
@@ -1,6 +1,10 @@
 .green-theme {
   #faq-accordion {
     .accordion-button {
+      background-color: $tan;
+      &.collapsed {
+        background-color: $white;
+      }
       &::after {
         background-image: url("data:image/svg+xml, %3csvg width='29' height='29' viewBox='0 0 29 29' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M22.9587 13.292H15.7087V6.04199H13.292V13.292H6.04199V15.7087H13.292V22.9587H15.7087V15.7087H22.9587V13.292Z' fill='%236BDE46'/%3e%3c/svg%3e")
       }
@@ -9,7 +13,7 @@
       }
     }
     .accordion-body {
-      background: url(../../resources/images/main-theme/shapes/splatter-green-top.svg) center bottom 50% no-repeat,
+      background-color: $tan;
     }
   }
 }
