--- a/wp-content/themes/fcc/resources/sass/_vars.scss
+++ b/wp-content/themes/fcc/resources/sass/_vars.scss
@@ -122,6 +122,7 @@ $spacers: (
     125:#{divide(125, 16)}rem,
     200:#{divide(200, 16)}rem,
     225:#{divide(225, 16)}rem,
+    240:#{divide(240, 16)}rem,
     250:#{divide(250, 16)}rem,
     300:#{divide(300, 16)}rem,
 );
