--- a/wp-content/themes/fcc/resources/sass/theme.scss
+++ b/wp-content/themes/fcc/resources/sass/theme.scss
@@ -5,6 +5,8 @@
 @import "../../node_modules/swiper/swiper";
 @import "../../node_modules/swiper/modules/navigation";
 @import "../../node_modules/swiper/modules/effect-fade";
+@import "../../node_modules/swiper/modules/pagination";
+
 
 
 // WordPress Core CSS
@@ -46,4 +48,5 @@
     '../../blocks/container/container',
     '../../blocks/theme-buttons/theme-buttons',
     '../../blocks/locations/locations',
+    '../../blocks/overnight-rates-dates/overnight-rates-dates',
     '../../blocks/rates-dates/rates-dates';
